--- a/app/views/panels_view/_copy_form.html.erb
+++ b/app/views/panels_view/_copy_form.html.erb
@@ -21,18 +21,24 @@
 </div>
 <% disp = needs_platform ? 'box' : 'none' %>
 <div id="platform-option" style="display: <%= disp %>">
+
     <% if game[:platforms] %>
+        <% select_platforms = platforms_for_select(game) %>
+    <% else %>
+        <% select_platforms = user_platforms_for_select %>
+    <% end %>
+
     <%= f.hidden_field :needs_platform, value: false %>
     <div class="uk-margin select-platform">
         <div uk-form-custom="target: > * > span:last-child">
-            <% if game[:platforms].size > 1 %>
-            <%= f.select(:platform, platforms_for_select(game), include_blank: 'Select platform') %>
+            <% if select_platforms.size > 1 %>
+            <%= f.select(:platform, select_platforms, include_blank: 'Select platform') %>
             <span class='bigs'>
                 <span class="cf-platform-icon"><%= svg 'platform_icon' %></span>
                 <span></span>
             </span>
             <% else %>
-            <%= f.select(:platform, platforms_for_select(game)) %>
+            <%= f.select(:platform, select_platforms) %>
             <span class='bigs'>
                 <span class="cf-platform-green"><%= svg 'platform_icon' %></span>
                 <span></span>
@@ -46,10 +52,6 @@
         <label><%= f.radio_button(:physical, true, checked: physical, class: "cf-physical") %><%= svg 'gamebox_icon' %> Physical</label>
         <label><%= f.radio_button(:physical, false, checked: !physical, class: "cf-digital") %><%= svg 'digital_icon' %> Digital</label>
     </div>
-    <% else %>
-    <p>You cant copy/move game with no platform to collection that needs platform
-    will be fixed soon</p>
-    <% end %>
 </div>
 <button name="button" type="submit" class="cf-add-button">Copy</button><span class="add-form-errors"></span>
 <% end %>
