Move change search bar placeholder js function form.js

--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -2,4 +2,5 @@ $("#big-c").html("<%= j(render partial: 'search_page') %>");
 $("li.active").removeClass('active');
 $("#m-search").addClass('active');
 $('input#search-igdb-bar').focus();
+changeSearchBar();
 Cookies.set('<%= current_user.id %>-last', 'search', { expires: 30 });
