Fix scroll up button.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -606,6 +606,7 @@ div.no-results {
 
 // Scroll Up Button (Search IGDB) - - - - - - - - - - - - - - - - - - - - - - //
 .scroll-up {
+    display: none;
     position: fixed;
     bottom: 10%;
     right: 0;
