--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= render 'layouts/menu' %>
     <div class="main-container">
       <%= render 'layouts/navigation' %>
-
+      <%= render 'layouts/toolbar' %>
       <div class="uk-grid-match uk-grid-collpase" uk-grid>
         <div class="uk-width-1-6"></div>
         <div class="uk-width-2-3">
@@ -21,7 +21,6 @@
         </div>
         <div class="uk-width-1-6"></div>
       </div>
-
     <%= render 'layouts/footer' %>
     </div>
 </body>
