Prepare first iteration of cover view. Add container-expand to big-c container. Fix spinner.

--- a/app/assets/stylesheets/cover_view.scss
+++ b/app/assets/stylesheets/cover_view.scss
@@ -171,9 +171,11 @@
     background: #bababa;
     border-radius: 3px;
     box-shadow: -2px 4px 9px 1px #0000004a;
+    cursor: pointer;
 
     img {
         height: inherit;
+        position: relative;
     }
 }
 
@@ -202,7 +204,6 @@
 
 .game-cover-effect:hover {
     transform: rotate(10deg);
-    cursor: pointer;
 }
 
 .game-cover-effect::after {
