--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -27,5 +27,5 @@
 <div id='r-q' style="display: none;"></div>
 <div id='r-s' style="display: none;"></div>
 <div class="my-games">
-    <%= render partial: 'panels_view/panels', locals: { collection: collection } %>
+    <%= render partial: 'my_games/hub', locals: { collection: collection } %>
 </div>
