--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -18,5 +18,6 @@ if (refresh) {
   ids.forEach(id => $('#' + id).show());
 }
 
+changeView("<%= j(render partial: 'my_games/covers') %>");
 filter();
 moreInfo();
