--- a/app/views/collections/_search.js.erb
+++ b/app/views/collections/_search.js.erb
@@ -6,7 +6,7 @@ arr.each(function() {
     }
 });
 
-$(".my-games").html("<%= j(render partial: 'panels_view/panels', locals: { collection: @collection }) %>");
+$(".my-games").html("<%= j(render partial: 'my_games/hub', locals: { collection: @collection }) %>");
 $('#r-q').text(<%= raw query %>);
 $('#r-s').text('<%= sort %>');
 
