--- a/app/views/games/copy.js.erb
+++ b/app/views/games/copy.js.erb
@@ -24,7 +24,7 @@ if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
 
     <% if !@copy || ( @current == @collection )%>
-      $("#big-c").html("<%= j(render partial: 'panels_view/my_games_panels', locals: { collection: @current }) %>");
+      $("#big-c").html("<%= j(render partial: 'my_games/hub', locals: { collection: @current }) %>");
     <% end %>
 
 } else {
