--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,7 @@
       <li><div id="addl-hide" class="uk-navbar-item nav-but">Hide Overlays</div></li>
       <% extra = 'active' if edit_open? %>
       <li><div id="g-show-edit" class="uk-navbar-item nav-but <%= extra %>">Show Options</div></li>
-      <li><div id="" class="uk-navbar-item nav-but">Change View</div></li>
+      <li><div id="change-view" class="uk-navbar-item nav-but">Change View</div></li>
       <li><div class="uk-navbar-item nav-but">Dark Theme</div></li>
       <li><%= link_to current_user.email, settings_path %></li>
       <li><%= link_to '', logout_path, method: :delete, 'uk-icon': 'sign-out' %></li>
