--- a/app/views/collections/show.js.erb
+++ b/app/views/collections/show.js.erb
@@ -18,6 +18,17 @@ if (refresh) {
   ids.forEach(id => $('#' + id).show());
 }
 
+// Read cookies and define partial
+//
+//
+
+// Render proper partial and corresponding functions
+//
+//
+
+// Function for changing views
+
+
 changeView("<%= j(render partial: 'my_games/covers') %>");
 filter();
 moreInfo();
