--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -5,14 +5,14 @@
         <span class="s-icon" uk-icon="icon: search"></span>
         <%= f.search_field(:name_dev_cont, placeholder: "Title or Developer", class: 'uk-input search-input', autofocus: "true", autocomplete: "off") %>
         </div>
-
+        <%= hidden_field_tag 'view', view %>
+        <h2><%= view %></h2>
         <% if collection.needs_platform %>
         <div class="srch-div first"></div>
         <div uk-form-custom="target: true">
             <%= f.select(:plat_eq, user_platforms, {include_blank: 'All Platforms'}, {class: 'select-input'} ) %>
             <span></span>
         </div>
-
         <div class="srch-div"></div>
         <div class="radios uk-inline">
             <label class="container">All<%= f.radio_button(:physical_eq, nil, checked: true, class: '') %><span class="checkmark"></span></label>
@@ -27,5 +27,6 @@
 <div id='r-q' style="display: none;"></div>
 <div id='r-s' style="display: none;"></div>
 <div class="my-games">
-    <%= render partial: 'my_games/hub', locals: { collection: collection } %>
+    <%= render partial: "my_games/#{ view }", locals: { collection: collection } %>
 </div>
+<%= render partial: 'layouts/toolbar', locals: { collection: collection } %>
