Fix problem with filtering platforms and changing views.

--- a/app/views/collections/change_view.js.erb
+++ b/app/views/collections/change_view.js.erb
@@ -6,7 +6,7 @@ if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
     search = $('#r-q').text().split(',');
     data['q'] = {
         name_dev_cont: search[0],
-        plat_cont: search[1],
+        plat_eq: search[1],
         physical_eq: search[2],
         s: $('#r-s').text()
     };
@@ -14,7 +14,7 @@ if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
     search = $('#r-q').text().split(',');
     data['q'] = {
         name_dev_cont: search[0],
-        plat_cont: search[1],
+        plat_eq: search[1],
         physical_eq: search[2]
     };
 } else if ($('#r-s').text().length != 0) {
