--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -23,7 +23,7 @@ var data = { type: 'refresh' };
         search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
-            plat_cont: search[1],
+            plat_eq: search[1],
             physical_eq: search[2],
             s: $('#r-s').text()
         };
@@ -31,7 +31,7 @@ var data = { type: 'refresh' };
         search = $('#r-q').text().split(',');
         data['q'] = {
             name_dev_cont: search[0],
-            plat_cont: search[1],
+            plat_eq: search[1],
             physical_eq: search[2]
         };
     } else if ($('#r-s').text().length != 0) {
