Add game-info (now covers-info) to my games.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,7 @@ $disabled: #b4b4b4;
 
 @import "cover_view";
 @import "panels_view";
+@import "list_view";
 @import "collections";
 @import "game_info";
 
