--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -3,6 +3,4 @@ $("#show-more").attr('id', 'showed_more');
 
 flip_offc('<%= current_user.id %>');
 
-// Fit game title inside no-cover
-textFit(document.getElementsByClassName("no-cover-game-name"), {minFontSize:18, maxFontSize: 26});
-$(".no-cover-game-name").addClass('fitted')
+fitNameInNoCover();
