Adapt change view feature to edit and copy move actions (my games).

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -274,6 +274,11 @@ div.no-results {
 }
 
 //OTHER
+
+#r-q, #r-s {
+    display: none;
+}
+
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
