--- a/app/views/collections/_my_games.html.erb
+++ b/app/views/collections/_my_games.html.erb
@@ -23,8 +23,8 @@
         <% end %>
     </div>
 </div>
-<div id='r-q' style="display: none;"></div>
-<div id='r-s' style="display: none;"></div>
+<div id='r-q'></div>
+<div id='r-s'></div>
 <div class="my-games">
     <%= render partial: "my_games/#{ view }", locals: { collection: collection } %>
 </div>
