--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -24,7 +24,7 @@ if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
 
     var data = {
-        type: 'refresh'
+        type: 'refresh', view: '<%= @view %>'
     };
 
     if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
