--- a/app/views/my_games/_edit_form.html.erb
+++ b/app/views/my_games/_edit_form.html.erb
@@ -4,6 +4,7 @@
 <%= hidden_field_tag :game_id, id %>
 <%= hidden_field_tag :last_platform, game.platform_name %>
 <%= hidden_field_tag :last_physical, game.physical %>
+<%= hidden_field_tag :view, view %>
 <%= f.hidden_field :igdb_id, value: igdb_id %>
 <div class="action">
 <label class="c-m chosen">Edit</span></label>
