Remove script for changing notifications position.

--- a/app/views/collections/_search.js.erb
+++ b/app/views/collections/_search.js.erb
@@ -16,5 +16,6 @@ $('#r-s').text('<%= sort %>');
 
 ids.forEach(id => $('#' + id).show());
 
+flip_offc(<%= user_id %>);
 moreInfo();
 fitNameInNoCover();
