--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -20,8 +20,8 @@ if (refresh) {
   ids.forEach(id => $('#' + id).show());
 }
 
+flip_offc(<%= user_id %>);
 filter();
 moreInfo();
 toggleEditMenu();
 fitNameInNoCover();
-
