--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -9,6 +9,6 @@ if (<%= !@inquiry.errors.any? %>) {
   $("#search-results").html("<%= j(render :partial => 'results') %>");
 }
 
-flip_offc('<%= current_user.id %>');
+flip_offc(<%= user_id %>);
 
 fitNameInNoCover();
