--- a/app/views/my_games/_list.html.erb
+++ b/app/views/my_games/_list.html.erb
@@ -1,28 +1,41 @@
 <div class="sort-links">
-    <span class="sort-icon"><%= svg 'sort' %></span>
-    <%= sort_link(@q, :name,'Title', {}, {remote: true}) %>
-    <div class="srch-div"></div>
-    <%= sort_link(@q, :first_release_date,'Release Date', {}, {remote: true}) %>
-    <div class="srch-div"></div>
-    <%= sort_link(@q, :added,'Date Added', {}, {remote: true}) %>
+  <span class="sort-icon"><%= svg 'sort' %></span>
+  <%= sort_link(@q, :name,'Title', {}, {remote: true}) %>
+  <div class="srch-div"></div>
+  <%= sort_link(@q, :first_release_date,'Release Date', {}, {remote: true}) %>
+  <div class="srch-div"></div>
+  <%= sort_link(@q, :added,'Date Added', {}, {remote: true}) %>
 </div>
-
-<div class="uk-grid uk-text-center uk-flex uk-flex-center covers-grid">
-
-    <div class="uk-width-1-1 page-info-front">
-        <div class="page-links pr cover-mod top">
-            <%= js_will_paginate @games, container: false %>
-        </div>
-    </div>
-
-  <ul>
-  <% @games.select('games.*, collection_games.created_at').each do |game| %>
-  <li><%= game.name %></li>
-  <% end %>
-  </ul>
-
-  <div class="uk-width-1-1 page-links cover-mod bottom">
-      <%= js_will_paginate @games, container: false %>
+<div class="uk-grid-collapse">
+  <div class="uk-width-1-1 page-links top pr">
+    <%= js_will_paginate @games, container: false %>
+  </div>
+  <% needs_platform = collection.needs_platform %>
+  <table class="games-table">
+    <% @games.select('games.*, collection_games.created_at').each do |game| %>
+    <tr>
+      <%= content_tag :td, class: 't-name' do %>
+      <%= game.name %>
+      <% if (status_id = game[:status]) && status_id != 0 %>
+      <%= content_tag :button, convert_status(status_id), class: 'gw-b' %>
+      <% end %>
+      <% if (category_id = game[:category]) && category_id != 0 %>
+      <%= content_tag :button, convert_category(category_id), class: 'gw-b' %>
+      <% end %>
+      <% end %>
+      <% release = game[:first_release_date] ? Time.at(game[:first_release_date]).year : '-' %>
+      <%= content_tag :td, release, class: 't-release' %>
+      <% developer = !game.developers.empty? ? game.developers.map(&:name).join(', ') : '-' %>
+      <%= content_tag :td, developer, class: 't-developer' %>
+      <% if needs_platform %>
+      <%= content_tag :td, game.platform_name, class: 't-platform' %>
+      <%= content_tag :td, game.physical ? 'Physical' : 'Digital', class: 't-format' %>
+      <% end %>
+      <%= content_tag :td, game.created_at.to_date, class: 't-added' %>
+    </tr>
+    <% end %>
+  </table>
+  <div class="uk-width-1-1 page-links bottom ">
+    <%= js_will_paginate @games, container: false %>
   </div>
 </div>
-
